// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input FormInput - supports loading state Renders FormInput status 'error' correctly 1`] = `
<input
  class="form-control with-invalid-icon is-invalid"
  type="text"
  value=""
/>
`;

exports[`Input FormInput - supports loading state Renders FormInput status 'valid' correctly 1`] = `
<input
  class="form-control with-invalid-icon is-valid"
  type="text"
  value=""
/>
`;

exports[`Input Input - does not support loading state Renders Input status 'error' correctly 1`] = `
<input
  class="form-control with-invalid-icon is-invalid"
  type="text"
  value=""
/>
`;

exports[`Input Input - does not support loading state Renders Input status 'valid' correctly 1`] = `
<input
  class="form-control with-invalid-icon is-valid"
  type="text"
  value=""
/>
`;
